[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/objects/crate.png" type="Texture" id=1]
[ext_resource path="res://objects/Crate.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="Crate" type="Area2D"]
collision_layer = 64
collision_mask = 8
script = ExtResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( -8, -8 )
texture = ExtResource( 1 )
polygon = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FadeDelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_out = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Crate_body_entered"]
[connection signal="timeout" from="FadeDelayTimer" to="." method="_on_FadeDelayTimer_timeout"]
